TAG: pgmgddbschema-6-0-22-41
TAG: pgmgddbschema-6-0-22-40
DATE: 10/25/2023
STAFF: lec
wts2-1311/fl2-604/improve lib_py_postgres/fix VOC_processAnnotHeaderAll_create.object
#       new file:   autosequence/VOC_AnnotHeader_create.object
#       new file:   autosequence/VOC_AnnotHeader_drop.object
#       modified:   procedure/VOC_processAnnotHeaderAll_create.object

TAG: pgmgddbschema-6-0-22-39
DATE: 10/19/2023
STAFF: lec
fl2-452/TAL - Allele PWI - New Note Type: Additional Project IDs
view/GXD_Index_SummaryBy_View_create.object

TAG: pgmgddbschema-6-0-22-38
DATE: 10/18/2023
STAFF: lec
wts2-1300/fl2-585/P-WI GXD Index Summary - add synonyms
view/GXD_Index_SummaryBy_View_create.object

TAG: pgmgddbschema-6-0-22-37
DATE: 10/05/2023
STAFF: lec
wts2-1236/fl2-574/improve vocload/remove obsolete VOC_GO_Cache

TAG: pgmgddbschema-6-0-22-36
DATE: 09/29/2023
STAFF: lec
wts2-1292/fl2-567/pwi specimen summary: problem generating link on ref detail unless results associated
#       modified:   view/BIB_Summary_View_create.object

TAG: pgmgddbschema-6-0-22-35
TAG: pgmgddbschema-6-0-22-34
DATE: 09/21/2023, 09/27/2023
STAFF: lec
wts2-1283/fl2-546/marker module/cannot add synonym
wts2-393/Disease to reference annotation
view/MGI_Reference_DOID_View_create.object
view/MGI_Reference_DOID_View_drop.object
trigger/MRK_Marker_create.object

TAG: pgmgddbschema-6-0-22-33
DATE: 09/11/2023
STAFF: lec
wts2-1273/fl2-527/pwi assay summary: problem generating link on ref detail unless results associated
view/BIB_Summary_View_create.object

TAG: pgmgddbschema-6-0-22-32
DATE: 08/03/2023
STAFF: lec
wts2-765/fl2-222/Remove mrk_alias table: backend components
moved some test script to dbsanitycheck

TAG: pgmgddbschema-6-0-22-31
DATE: 06/13/2023
STAFF: lec
wts2-1178/fl2c/gxd assay/tool template
view/GXD_Assay_DLTemplate_View_*

TAG: pgmgddbschema-6-0-22-30
DATE: 05/24/2023
STAFF: lec
wts2-1188/fl2-363/Unable to add multiple notes to a single MP term in P-WI MP Annotation Module