@@ -1,3 +1,9 @@
+TAG: pgmgddbschema-6-0-22-42
+DATE: 11/16/2023
+STAFF: lec
+wts2-1336/fl2-642/mp load/annotation header issue
+#       modified:   procedure/VOC_processAnnotHeader_create.object
+
 TAG: pgmgddbschema-6-0-22-41
 TAG: pgmgddbschema-6-0-22-40
 DATE: 10/25/2023
